fix(left panel): add proper class name to collapse button

--- a/src/scss/layout/_left-panel.scss
+++ b/src/scss/layout/_left-panel.scss
@@ -24,7 +24,7 @@
     outline: 0;
     
 
-    &.data-center-facilities {
+    &.data-center-facilities-collapse-button {
         cursor: pointer;
         position: absolute;
         display: flex;
